# whats-cooking-api-server

./: config.py  pyproject.toml  requirements.txt  server.py
result_objects/: web_page_result.py  web_results_container.py
searchers/: recipe_searcher.py  utils.py
searchers/mongodb/: mongodb_searcher.py
