[tool.poetry]
name = "whats-cooking-api-server"
version = "0.1.0"
description = ""
authors = ["limonyellow <lemon@example.com>"]
homepage = "https://github.com/limonyellow/whats-cooking-api-server"
repository = "https://github.com/limonyellow/whats-cooking-api-server"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = {extras = ["srv"], version = "^4.1.0"}
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
